--- a/spacca/.vscode/launch.json
+++ b/spacca/.vscode/launch.json
@@ -7,7 +7,7 @@
             "name": "Launch JavaFX App",
             "request": "launch",
             "mainClass": "Main", // Sostituisci con il nome della tua classe principale
-            "vmArgs": "--module-path /home/antolomb03/javaFX/openjfx-23.0.1_linux-x64_bin-sdk/javafx-sdk-23.0.1/lib --add-modules javafx.controls,javafx.fxml ",
+            "vmArgs": "--module-path /home/antolomb03/javaFX/openjfx-23.0.1_linux-x64_bin-sdk/javafx-sdk-23.0.1/lib --add-modules javafx.controls,javafx.fxml ",//Sostituire con il percorso della libreria javaFX
             "cwd": "${workspaceFolder}"
         }
     ]
